Add new component in database product_orders, and resolve sum from the orders create

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11012,10 +11012,9 @@ h3 {
 }
 
 .input {
-  width: 220px;
+  width: 200px;
   border: 1px solid #6d829b;
-  height: 50px;
-  border-radius: 10px;
+  height: 43px;
   text-indent: 20px;
   font-size: 16px;
   line-height: 1.71;
@@ -11033,11 +11032,10 @@ h3 {
 }
 
 .input-select {
-  width: 220px;
-  height: 50px;
+  width: 200px;
+  height: 43px;
   padding-left: 20px;
   background-color: #fff;
-  border-radius: 10px;
   border: 1px solid #6d829b;
 }
 
@@ -11048,13 +11046,17 @@ h3 {
 
 .textarea {
   padding: 20px 0 0 20px;
-  border-radius: 10px;
   border: 1px solid #6d829b;
 }
 
 .textarea:focus {
   border: 1px solid #4c93e9;
   outline: none;
+}
+
+table, th, td {
+  border: 1px solid #6d829b;
+  padding: 10px;
 }
 
 li {
