--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11059,6 +11059,14 @@ table, th, td {
   padding: 10px;
 }
 
+.payed-true {
+  text-decoration: line-through;
+}
+
+.user-li {
+  list-style: decimal;
+}
+
 li {
   list-style: none;
 }
